0024045: Invalid test case for matrix-vector multiplication